--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,15 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --cover-image: url("../images/cover-image-dark.png");
+  --cover-color: #000028;
+  --rectangle: url("../images/rectangle-dark.png");
+
+  --accent-color: #ff0070;
+  --btn-color: #ff0070;
+  --btn-outline: rgba(255, 0, 112, 0.4);
+  --title-color: #db00ff;
+  --main-text-color: #f1b2ce;
+  --accent-text-color: #000028;
+  --list-title-color: #ff0070;
 }
