--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,35 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --cover-image: url("../images/cover-image-light.png");
+  --cover-color: #fff1f7;
+  --rectangle: url("../images/rectangle-light.png");
+
+  --accent-color: #ff8dcb;
+  --btn-color: #353430;
+  --btn-outline: rgba(50, 49, 45, 0.4);
+  --title-color: #ffc2e6;
+  --main-text-color: #353430;
+  --accent-text-color: #353430;
+  --list-title-color: #353430;
+}
+
+:root.theme-light .header__decorative-word {
+  display: none;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --cover-image: url("../images/cover-image-light.png");
+    --cover-color: #fff1f7;
+    --rectangle: url("../images/rectangle-light.png");
+
+    --accent-color: #ff8dcb;
+    --btn-color: #353430;
+    --btn-outline: rgba(50, 49, 45, 0.4);
+    --title-color: #ffc2e6;
+    --main-text-color: #353430;
+    --accent-text-color: #353430;
+    --list-title-color: #353430;
+  }
 }
