--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,210 @@
 
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  background: var(--cover-image) center/cover no-repeat;
+  background-color: var(--cover-color);
+  background-attachment: fixed;
+  color: var(--main-text-color);
+  font-family: "IBM Plex mono", serif;
+  flex-wrap: wrap;
+  max-inline-size: 100%;
+  max-block-size: 100%;
+}
+
+.header {
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  height: 100vh;
+  min-height: var(--min-height);
+  padding: 10px;
+  margin-block-end: 40px;
+}
+
+.decorated-zone {
+  position: relative;
+}
+
+.decorated-zone::before {
+  content: var(--rectangle);
+  position: absolute;
+  left: 10px;
+  bottom: 5.5px;
+  color: black;
+}
+
+.decorated-zone::after {
+  content: var(--rectangle);
+  position: absolute;
+  transform: rotate(180deg);
+  right: 10px;
+  top: 5.5px;
+}
+
+.header__title {
+  line-height: 83%;
+}
+
+.header__decorative-word {
+  position: absolute;
+  right: 35px;
+  top: 10px;
+  font-size: 18px;
+  line-height: 139%;
+  color: var(--accent-color);
+}
+
+.header__decorative-word::after {
+  content: url("../images/ellipse.png");
+  position: absolute;
+  aspect-ratio: 1;
+  top: 3px;
+}
+
+.header__theme-menu {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 13px;
+}
+
+.header__theme-menu-item {
+  text-decoration: none;
+}
+
+.header__theme-menu-button {
+  padding: 1px 12px;
+  font-size: 18px;
+  line-height: 100%;
+  color: var(--btn-color);
+  text-align: center;
+  text-transform: lowercase;
+  background-color: transparent;
+  border: none;
+}
+
+.header__theme-menu-button:hover {
+  cursor: pointer;
+  outline: 1px solid var(--btn-outline);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--btn-color);
+  outline: none;
+}
+
+.header__theme-menu-button_active {
+  pointer-events: none;
+  outline: 1px solid var(--btn-color);
+}
+
+.header__description {
+  margin-block-start: 55px;
+  height: max-content;
+  line-height: 130%;
+}
+
+.content {
+  display: grid;
+  grid-template-columns: 1;
+  gap: 20px;
+  margin-block-end: 50px;
+  padding-inline: 10px;
+  font-size: 18px;
+  line-height: 130%;
+}
+
+.title {
+  font-size: 18px;
+  line-height: 130%;
+  font-weight: bold;
+  color: var(--list-title-color);
+}
+
+.list {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: 1;
+  grid-template-rows: 2;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.images__section {
+  display: grid;
+  grid-template-columns: 1;
+  gap: 10px;
+  margin-block-end: 40px;
+  padding-inline: 10px;
+  font-size: 18px;
+  line-height: 130%;
+}
+
+.images__list {
+  display: grid;
+  gap: 10px;
+}
+
+.images__item-image {
+  display: block;
+  inline-size: 100%;
+  block-size: 100%;
+  object-fit: cover;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  min-height: var(--min-height);
+}
+
+.accent-title {
+  color: var(--title-color);
+  font-size: var(--fs-accent-title);
+  text-shadow: 4px 4px 0 var(--accent-color);
+}
+
+.title-decor {
+  color: var(--accent-text-color);
+  background-color: var(--accent-color);
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.answers__subtitle {
+  font-weight: normal;
+}
+
+.link {
+  text-decoration: none;
+  color: var(--main-text-color);
+  text-shadow: 2px 1px 0 var(--accent-color);
+}
+
+.link:hover {
+  cursor: pointer;
+  border-bottom: 1px solid var(--main-text-color);
+}
+
+.link:focus {
+  outline: none;
+}
+
+.link:focus-visible {
+  outline: 1px solid var(--main-text-color);
+  outline-offset: 1px;
 }
