--- a/styles/variables.css
+++ b/styles/variables.css
@@ -34,7 +34,8 @@
   }
 
   .header__theme-menu {
-    margin-inline-end: 20px;
+    margin-inline-end: 18px;
+    margin-block-start: 17px;
     grid-row: 1;
     grid-column: 2;
   }
@@ -173,13 +174,19 @@
     grid-column: 2 / 4;
     justify-content: center;
     align-items: start;
+    margin-block-start: 20px;
+    margin-inline-end: 0px;
   }
 
   .header__theme-menu-list {
     display: flex;
     flex-direction: row;
-    gap: 13px;
-    padding-block-start: 20px;
+    text-align: center;
+    gap: 16px;
+  }
+
+  .header__theme-menu-button {
+    padding: 1px 10px;
   }
 
   .content {
