--- a/styles/style.css
+++ b/styles/style.css
@@ -2,8 +2,8 @@
 
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
-  background: var(--cover-image) center/cover no-repeat;
   background-color: var(--cover-color);
+  background: var(--cover-image) center/cover no-repeat;
   background-attachment: fixed;
   color: var(--main-text-color);
   font-family: "IBM Plex mono", serif;
@@ -17,7 +17,7 @@
   grid-template-rows: 1fr min-content 1fr;
   height: 100vh;
   min-height: var(--min-height);
-  padding: 10px;
+  padding: var(--page-padding);
   margin-block-end: 40px;
 }
 
@@ -28,8 +28,8 @@
 .decorated-zone::before {
   content: var(--rectangle);
   position: absolute;
-  left: 10px;
-  bottom: 5.5px;
+  bottom: calc(15px - var(--page-padding));
+  left: var(--page-padding);
   color: black;
 }
 
@@ -37,8 +37,8 @@
   content: var(--rectangle);
   position: absolute;
   transform: rotate(180deg);
-  right: 10px;
-  top: 5.5px;
+  top: calc(15px - var(--page-padding));
+  right: var(--page-padding, 10);
 }
 
 .header__title {
@@ -47,8 +47,8 @@
 
 .header__decorative-word {
   position: absolute;
-  right: 35px;
-  top: 10px;
+  right: calc(28px + var(--page-padding, 10px));
+  top: calc(5px + var(--page-padding, 10px));
   font-size: 18px;
   line-height: 139%;
   color: var(--accent-color);
@@ -64,14 +64,14 @@
 .header__theme-menu {
   display: flex;
   justify-content: end;
-  align-items: center;
+  align-self: center;
+  padding-block: 30px;
 }
 
 .header__theme-menu-list {
   display: flex;
   flex-direction: column;
-  gap: 15px;
-  margin-inline-end: 2px;
+  gap: 12px;
 }
 
 .header__theme-menu-item {
@@ -79,7 +79,7 @@
 }
 
 .header__theme-menu-button {
-  padding: 1px 11px;
+  padding: 2px 13px 4px;
   font-size: 18px;
   line-height: 100%;
   color: var(--btn-color);
@@ -106,23 +106,24 @@
 .header__theme-menu-button_active {
   pointer-events: none;
   outline: 1px solid var(--btn-color);
-  outline-offset: 2px;
+  outline-offset: 1px;
 }
 
 .header__description {
   margin-block-start: 55px;
   height: max-content;
   line-height: 130%;
+  font-weight: bold;
 }
 
 .content {
   display: grid;
   grid-template-columns: 1;
-  gap: 20px;
+  gap: 19.5px;
   margin-block-end: 50px;
-  padding-inline: 10px;
+  padding-inline: var(--page-padding);
   font-size: 18px;
-  line-height: 130%;
+  line-height: 23.4px;
 }
 
 .title {
