--- a/styles/style.css
+++ b/styles/style.css
@@ -2,11 +2,11 @@
 
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
-  background-color: var(--cover-color);
   background: var(--cover-image) center/cover no-repeat;
+  background-color: var(--cover-color);
   background-attachment: fixed;
   color: var(--main-text-color);
-  font-family: "IBM Plex mono", serif;
+  font-family: "IBM Plex mono", sans-serif;
   flex-wrap: wrap;
   max-inline-size: 100%;
   max-block-size: 100%;
@@ -26,19 +26,25 @@
 }
 
 .decorated-zone::before {
-  content: var(--rectangle);
+  content: "";
   position: absolute;
   bottom: calc(15px - var(--page-padding));
   left: var(--page-padding);
-  color: black;
+  width: 25px;
+  height: 25px;
+  border-bottom: var(--rectangle-element);
+  border-left: var(--rectangle-element);
 }
 
 .decorated-zone::after {
-  content: var(--rectangle);
+  content: "";
   position: absolute;
-  transform: rotate(180deg);
   top: calc(15px - var(--page-padding));
-  right: var(--page-padding, 10);
+  right: var(--page-padding);
+  width: 25px;
+  height: 25px;
+  border-right: var(--rectangle-element);
+  border-top: var(--rectangle-element);
 }
 
 .header__title {
@@ -48,17 +54,22 @@
 .header__decorative-word {
   position: absolute;
   right: calc(28px + var(--page-padding, 10px));
-  top: calc(5px + var(--page-padding, 10px));
+  top: var(--page-padding, 10px);
   font-size: 18px;
   line-height: 139%;
   color: var(--accent-color);
 }
 
 .header__decorative-word::after {
-  content: url("../images/ellipse.png");
+  content: "";
   position: absolute;
+  top: 8px;
+  right: -15px;
+  block-size: 9px;
   aspect-ratio: 1;
-  top: 3px;
+  background-color: var(--accent-color);
+  border-radius: 50%;
+  box-shadow: 0px 0px 4px 2px var(--accent-color);
 }
 
 .header__theme-menu {
@@ -100,7 +111,6 @@
 
 .header__theme-menu-button:focus-visible {
   border-bottom: 1px solid var(--btn-color);
-  outline: none;
 }
 
 .header__theme-menu-button_active {
@@ -133,6 +143,10 @@
   color: var(--list-title-color);
 }
 
+.wrapper-title {
+  margin-block-end: 20px;
+}
+
 .list {
   display: grid;
   gap: 20px;
@@ -146,7 +160,7 @@
   gap: 10px;
 }
 
-.images__section {
+.content__section-images {
   display: grid;
   grid-template-columns: 1;
   gap: 10px;
@@ -156,7 +170,7 @@
   line-height: 130%;
 }
 
-.images__list {
+.images__wrapper {
   display: grid;
   gap: 10px;
 }
@@ -182,6 +196,10 @@
   text-shadow: 4px 4px 0 var(--accent-color);
 }
 
+.footer__title {
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
 .title-decor {
   color: var(--accent-text-color);
   background-color: var(--accent-color);
@@ -196,7 +214,7 @@
 .link {
   text-decoration: none;
   color: var(--main-text-color);
-  text-shadow: 2px 1px 0 var(--accent-color);
+  text-shadow: 2px 2px 0 var(--accent-color);
 }
 
 .link:hover {
@@ -211,4 +229,213 @@
 .link:focus-visible {
   outline: 1px solid var(--main-text-color);
   outline-offset: 1px;
+}
+
+@media (width >= 768px) {
+  .header {
+    grid-template-rows: 1fr min-content 1fr;
+    grid-template-columns: 1fr 1fr;
+    margin-block-end: 60px;
+    padding: 2px;
+  }
+
+  .header__theme-menu {
+    margin-inline-end: 18px;
+    margin-block-start: 17px;
+    grid-row: 1;
+    grid-column: 2;
+  }
+
+  .header__title {
+    grid-row: 2;
+    grid-column: 1 / 3;
+  }
+
+  .header__description {
+    grid-row: 3;
+    grid-column: 2;
+    margin-block-start: 162px;
+    margin-inline-end: 18px;
+  }
+
+  .header__decorative-word {
+    top: 23px;
+    right: 45px;
+  }
+
+  .decorated-zone::before {
+    left: 20px;
+    bottom: 15px;
+  }
+
+  .decorated-zone::after {
+    right: 20px;
+    top: 15px;
+  }
+
+  .content {
+    margin-block-end: 80px;
+    grid-template-columns: 1fr minmax(min-content, 472px);
+  }
+
+  .title {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .list {
+    grid-column: 2;
+  }
+
+  .wrapper {
+    grid-column: 2;
+  }
+
+  .content__list {
+    grid-column: 1 / 3;
+    grid-row: 2;
+  }
+
+  .content__section-images {
+    gap: 20px;
+    padding-inline: 20px;
+    margin-block-end: 60px;
+  }
+
+  .images__wrapper {
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-flow: dense;
+    gap: 20px;
+  }
+
+  .images__item-image:first-child {
+    grid-row: 1;
+    grid-column: 1 / 3;
+  }
+
+  .images__item-image:nth-child(2) {
+    grid-row-start: 1;
+    grid-row-end: 3;
+    grid-column: 3;
+  }
+
+  .images__item-image:nth-child(3) {
+    grid-row: 2 / 4;
+    grid-column: 1;
+  }
+
+  .images__item-image:nth-child(5) {
+    grid-row: 3;
+    grid-column: 2 / 4;
+  }
+}
+
+@media (width >= 1024px) {
+  .header {
+    grid-template-rows: 1fr min-content 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin-block-end: 60px;
+    padding-inline: 2px;
+  }
+
+  .header__title {
+    grid-row: 2;
+    grid-column: 1 / 5;
+  }
+
+  .header__description {
+    grid-row: 3;
+    grid-column: 3 / 5;
+    margin-block-start: 114px;
+    margin-inline-end: 18px;
+  }
+
+  .decorated-zone::before {
+    left: 20px;
+    bottom: 15px;
+  }
+
+  .decorated-zone::after {
+    right: 20px;
+    top: 15px;
+  }
+
+  .header__decorative-word {
+    top: 20px;
+    right: 45px;
+  }
+
+  .header__theme-menu {
+    grid-row: 1;
+    grid-column: 2 / 4;
+    justify-content: center;
+    align-self: start;
+    margin-block-start: 19px;
+    margin-inline-end: 0px;
+    padding-block: 0px;
+  }
+
+  .header__theme-menu-list {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    gap: 10px;
+  }
+
+  .header__theme-menu-button {
+    padding: 2px 13px 4px;
+  }
+
+  .content {
+    margin-block-end: 80px;
+    grid-template-columns: 1fr minmax(min-content, 648px);
+  }
+
+  .content__section {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .examples__title {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .content__list {
+    grid-column: 1 / 4;
+    grid-row: 2;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .content__section-images {
+    gap: 20px;
+    padding-inline: 20px;
+    margin-block-end: 60px;
+  }
+
+  .images__wrapper {
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-flow: dense;
+    gap: 20px;
+  }
+
+  .images__item-image:first-child {
+    grid-row: 1;
+    grid-column: 1 / 3;
+  }
+
+  .images__item-image:nth-child(2) {
+    grid-row-start: 1;
+    grid-row-end: 3;
+    grid-column: 3;
+  }
+
+  .images__item-image:nth-child(3) {
+    grid-row: 2 / 4;
+    grid-column: 1;
+  }
+
+  .images__item-image:nth-child(5) {
+    grid-row: 3;
+    grid-column: 2 / 4;
+  }
 }
