--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,7 +6,7 @@
 :root {
   --cover-image: url("../images/cover-image-dark.png");
   --cover-color: #000028;
-  --rectangle: url("../images/rectangle-dark.png");
+  --rectangle-element: 1px solid var(--btn-color);
 
   --min-height: 668px;
   --fs-accent-title: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
@@ -27,107 +27,6 @@
     --fs-accent-title: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     --page-padding: 20px;
   }
-
-  .header {
-    grid-template-rows: 1fr min-content 1fr;
-    grid-template-columns: 1fr 1fr;
-    margin-block-end: 60px;
-    padding: 2px;
-  }
-
-  .header__theme-menu {
-    margin-inline-end: 18px;
-    margin-block-start: 17px;
-    grid-row: 1;
-    grid-column: 2;
-  }
-
-  .header__title {
-    grid-row: 2;
-    grid-column: 1 / 3;
-  }
-
-  .header__description {
-    grid-row: 3;
-    grid-column: 2;
-    margin-block-start: 162px;
-    margin-inline-end: 18px;
-  }
-
-  .header__decorative-word {
-    top: 23px;
-    right: 45px;
-  }
-
-  .decorated-zone::before {
-    left: 20px;
-    bottom: 15px;
-  }
-
-  .decorated-zone::after {
-    right: 20px;
-    top: 15px;
-  }
-
-  .content {
-    margin-block-end: 80px;
-  }
-
-  .question__section {
-    grid-template-columns: 1fr minmax(min-content, 472px);
-  }
-
-  .examples__section {
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr auto;
-  }
-
-  .examples__title {
-    grid-column: 1;
-    grid-row: 1;
-  }
-
-  .examples__list {
-    grid-column: 1 / 4;
-    grid-row: 2;
-  }
-
-  .answers__section {
-    grid-template-columns: 1fr minmax(min-content, 472px);
-  }
-
-  .images__section {
-    gap: 20px;
-    padding-inline: 20px;
-    margin-block-end: 60px;
-  }
-
-  .images__list {
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-flow: dense;
-    gap: 20px;
-  }
-
-  .images__item-image:first-child {
-    grid-row: 1;
-    grid-column: 1 / 3;
-  }
-
-  .images__item-image:nth-child(2) {
-    grid-row-start: 1;
-    grid-row-end: 3;
-    grid-column: 3;
-  }
-
-  .images__item-image:nth-child(3) {
-    grid-row: 2 / 4;
-    grid-column: 1;
-  }
-
-  .images__item-image:nth-child(5) {
-    grid-row: 3;
-    grid-column: 2 / 4;
-  }
 }
 
 @media (width >= 1024px) {
@@ -135,121 +34,5 @@
     --min-height: 768px;
     --fs-accent-title: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     --page-padding: 20px;
-  }
-
-  .header {
-    grid-template-rows: 1fr min-content 1fr;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    margin-block-end: 60px;
-    padding-inline: 2px;
-  }
-
-  .header__title {
-    grid-row: 2;
-    grid-column: 1 / 5;
-  }
-
-  .header__description {
-    grid-row: 3;
-    grid-column: 3 / 5;
-    margin-block-start: 114px;
-    margin-inline-end: 18px;
-  }
-
-  .decorated-zone::before {
-    left: 20px;
-    bottom: 15px;
-  }
-
-  .decorated-zone::after {
-    right: 20px;
-    top: 15px;
-  }
-
-  .header__decorative-word {
-    top: 20px;
-    right: 45px;
-  }
-
-  .header__theme-menu {
-    grid-row: 1;
-    grid-column: 2 / 4;
-    justify-content: center;
-    align-self: start;
-    margin-block-start: 19px;
-    margin-inline-end: 0px;
-    padding-block: 0px;
-  }
-
-  .header__theme-menu-list {
-    display: flex;
-    flex-direction: row;
-    text-align: center;
-    gap: 10px;
-  }
-
-  .header__theme-menu-button {
-    padding: 2px 13px 4px;
-  }
-
-  .content {
-    margin-block-end: 80px;
-  }
-
-  .question__section {
-    grid-template-columns: 1fr minmax(min-content, 648px);
-  }
-
-  .examples__section {
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr auto;
-  }
-
-  .examples__title {
-    grid-column: 1;
-    grid-row: 1;
-  }
-
-  .examples__list {
-    grid-column: 1 / 4;
-    grid-row: 2;
-    grid-template-columns: repeat(3, 1fr);
-  }
-
-  .answers__section {
-    grid-template-columns: 1fr minmax(min-content, 648px);
-  }
-
-  .images__section {
-    gap: 20px;
-    padding-inline: 20px;
-    margin-block-end: 60px;
-  }
-
-  .images__list {
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-flow: dense;
-    gap: 20px;
-  }
-
-  .images__item-image:first-child {
-    grid-row: 1;
-    grid-column: 1 / 3;
-  }
-
-  .images__item-image:nth-child(2) {
-    grid-row-start: 1;
-    grid-row-end: 3;
-    grid-column: 3;
-  }
-
-  .images__item-image:nth-child(3) {
-    grid-row: 2 / 4;
-    grid-column: 1;
-  }
-
-  .images__item-image:nth-child(5) {
-    grid-row: 3;
-    grid-column: 2 / 4;
   }
 }
